# crunchvanity

./: .gitignore  Cargo.toml  Readme.md
src/: Counter.sol  IERC1271.sol  main.rs
