[package]
name = "crunchvanity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2.1"
ethers = "0.13.0"
eyre = "0.6.8"
hex = "0.4.3"
itertools = "0.10.3"
rayon = "1.5.3"
serde_json = "1.0.83"
sha256 = "1.0.3"
tokio = { version = "1.18.2", features = ["full"] }
